toggle discreet mode
Toggle discreet mode on/off

--- a/static/i18n/en/app.json
+++ b/static/i18n/en/app.json
@@ -581,6 +581,9 @@
       "title": "Save logs",
       "desc": "Saving Ledger Live logs may be necessary for troubleshooting purposes.",
       "btn": "Save"
+    },
+    "discreetMode":{
+      "toggleDiscreetMode": "Toggle discreet mode"
     }
   },
   "password": {
